# modern-document-converter-for-ai-library

./: .gitignore  AI-ONBOARDING.md  llm.md  main.py  requirements.txt  smoke_test_caselaw.py  smoke_test_classifier.py  smoke_test_convert.py  smoke_test_extractor.py  smoke_test_registry.py  smoke_test_rename.py
data/: .gitkeep  (+1 more)
logs/: .gitkeep
zOld-Code/step1--Base_FILENAME--a-caselaw/: .gitignore  CHANGELOG.md  INSTRUCTIONS_FOR_USE.md  README.md  TROUBLESHOOTING.md  analyze_samples.py  courts_mapping.json  pyproject.toml  sample_analysis.json
zOld-Code/step1--Base_FILENAME--a-caselaw/docs/: FINAL_FORMAT_SUMMARY.md  TEST_RESULTS.md
zOld-Code/step1--Base_FILENAME--a-caselaw/docs/archive/: EXTRACTION_RULES.md  FORMATTING_RULES.md  IMPLEMENTATION_PLAN.md  PROPOSED_FILENAMES.md  UPDATED_FORMATTING_RULES.md
zOld-Code/step1--Base_FILENAME--a-caselaw/sample_files/: all_court_abbreviations.md
zOld-Code/step1--Base_FILENAME--a-caselaw/sample_word/: c.Ga__2020__Lafayette-v-Chandler__840_SE2d_638.docx
zOld-Code/step1--Base_FILENAME--a-caselaw/src/: cli.py  config_manager.py  renamer.py
zOld-Code/step1--Base_FILENAME--a-caselaw/src/data/: reporters_database.json
zOld-Code/step1--Base_FILENAME--a-caselaw/src/extractors/: court_extractor.py  date_extractor.py  docx_extractor.py  metadata_extractor.py  reporter_extractor.py
zOld-Code/step1--Base_FILENAME--a-caselaw/tests/: test_docx_extractor.py
zOld-Code/step3a--NORMALIZE-TXT--MODERN--convert_to_txt--clean--add_headings/: .doc_to_markdown_history.db  .gitignore  clean-txt  clean_txt.py  convert-docs  pyproject.toml  requirements.txt  test_setup.py
zOld-Code/step3a--NORMALIZE-TXT--MODERN--convert_to_txt--clean--add_headings/doc_to_markdown/: __init__.py  cli.py  converter_factory.py  file_detector.py  file_status.py  frontmatter.py  markdown_cleaner.py  processor.py  tracking.py
(+71 files in other folders)
